package juliokozarewicz.tasks.domain.exception;

public enum DomainExceptionEnum {
    INVALID_CREDENTIALS,
    PAYMENT_REQUIRED,
    NO_PERMISSION_TO_ACCESS,
    USER_NOT_FOUND,
    INVALID_PRIORITY,
    INVALID_DATE,
    INVALID_DATE_RANGE,
    INVALID_ALLDAY,
    INVALID_REMINDER,
    DUPLICATED_TASK;
}