@startuml Class_POST_Tasks
!theme plain
skinparam pageMargin 10
skinparam dpi 120
skinparam classAttributeIconSize 0
skinparam classBorderThickness 1.5
skinparam defaultFontSize 10
skinparam linetype ortho

title POST /api/v1/tasks — Class Diagram

package "adapter.rest" {

    class TasksCreateController {
        - tasksBaseURL : String
        - tasksCreateUseCase : TasksCreateUseCase
        --
        + create(dto, bindingResult,\n  request) : ResponseEntity
    }

    class TasksCreateDTO <<record>> {
        + taskName     : String
        + description  : String
        + category     : UUID
        + color        : String
        + priority     : Integer
        + startTime    : LocalDateTime
        + endTime      : LocalDateTime
        + location     : String
        + allDay       : Boolean
        + reminderTime : LocalDateTime
        + notifyActive : Boolean
        + status       : String
        + dueDate      : LocalDateTime
    }

    class StandardResponseDTO {
        - timestamp   : Instant
        - statusCode  : int
        - messageCode : String
        - fieldErrors : List<Map<String,String>>
        - data        : Object
        - meta        : Map<String,Object>
        - links       : Map<String,Object>
    }

    class GlobalSuccessEnum <<enumeration>> {
        CREATE_TASK_SUCCESS(201,\n"CREATE_TASK_SUCCESS")
    }

    class GlobalExceptionEnum <<enumeration>> {
        INVALID_CREDENTIALS(401, ...)
        DUPLICATED_TASK(409, ...)
        INVALID_PRIORITY(400, ...)
        INVALID_DATE_RANGE(400, ...)
        INVALID_ALLDAY(400, ...)
        INVALID_REMINDER(400, ...)
        UNPROCESSABLE_ENTITY(422, ...)
        SERVICE_UNAVAILABLE(503, ...)
        INTERNAL_SERVER_ERROR(500, ...)
    }

    interface TasksCreateCommand {
        + taskName()     : String
        + description()  : String
        + category()     : UUID
        + color()        : String
        + priority()     : Integer
        + startTime()    : LocalDateTime
        + endTime()      : LocalDateTime
        + location()     : String
        + allDay()       : Boolean
        + reminderTime() : LocalDateTime
        + notifyActive() : Boolean
        + status()       : String
        + dueDate()      : LocalDateTime
    }
}

package "application" {

    class TasksCreateUseCase {
        - tasksRepository    : TasksRepository
        - tasksEventProducer : TasksEventProducer
        --
        + execute(credentialsData,\n  command) : String
    }
}

package "domain" {

    class TasksEntity {
        - idUser       : UUID
        - idCreated    : UUID
        - createdAt    : LocalDateTime
        - updatedAt    : LocalDateTime
        - taskName     : String
        - description  : String
        - category     : UUID
        - color        : String
        - priority     : Integer
        - startTime    : LocalDateTime
        - endTime      : LocalDateTime
        - location     : String
        - allDay       : boolean
        - reminderTime : LocalDateTime
        - notifyActive : boolean
        - status       : String
        - dueDate      : LocalDateTime
        --
        + TasksEntity(...) : validates on construct
        - validateBusinessRules(\n  idUser, priority,\n  startTime, endTime,\n  allDay, reminderTime,\n  dueDate) : void
    }

    class DomainException {
        - error : DomainExceptionEnum
        --
        + DomainException(error)
        + getError() : DomainExceptionEnum
    }

    class DomainExceptionEnum <<enumeration>> {
        INVALID_CREDENTIALS
        INVALID_PRIORITY
        INVALID_DATE_RANGE
        INVALID_ALLDAY
        INVALID_REMINDER
        DUPLICATED_TASK
        NO_PERMISSION_TO_ACCESS
        PAYMENT_REQUIRED
    }

    interface TasksRepository {
        + existsByTaskNameAndDueDate(\n  name, dueDate) : boolean
        + save(entity) : void
    }
}

package "infrastructure.messaging" {

    class TasksEventProducer {
        - kafkaTemplate : KafkaTemplate<String, byte[]>
        - objectMapper  : ObjectMapper
        --
        + producer(message : TasksEntity) : void
    }

    class TasksEventConsumer {
        - tasksRepository : TasksRepository
        - objectMapper    : ObjectMapper
        --
        + consumer(record, ack) : void
    }

    class MessagingTopicEnum <<enumeration>> {
        TASKS_CREATE_PERSIST\n("tasks.create.persist.v1")
        --
        + getTopicName() : String
    }
}

package "infrastructure.persistence" {

    class TasksRepositoryImpl {
        - tasksRepositoryJPA : TasksRepositoryJPA
        - tasksCategoryJPA   : TasksCategoryJPA
        --
        + existsByTaskNameAndDueDate(...) : boolean
        + save(entity : TasksEntity) : void
        - mapToModel(entity,\n  category) : TasksModel
    }

    interface TasksRepositoryJPA {
        + save(model : TasksModel) : TasksModel
        + existsByTaskNameAndDueDate(\n  name, dueDate) : boolean
    }

    interface TasksCategoryJPA {
        + findById(id : UUID)\n  : Optional<CategoryModel>
    }

    class TasksModel <<@Entity>> {
        - id           : UUID
        - createdAt    : LocalDateTime
        - updatedAt    : LocalDateTime
        - taskName     : String
        - description  : String
        - color        : String
        - priority     : int
        - startTime    : LocalDateTime
        - endTime      : LocalDateTime
        - location     : String
        - allDay       : boolean
        - reminderTime : LocalDateTime
        - notifyActive : boolean
        - status       : String
        - dueDate      : LocalDateTime
        - idUser       : UUID
        - category     : CategoryModel
    }

    class CategoryModel <<@Entity>> {
        - id           : UUID
        - categoryName : String
        - idUser       : UUID
        - tasks        : List<TasksModel>
    }
}

package "infrastructure.filters" {
    class AuthFilter <<OncePerRequestFilter>> {
        - jwtSecret : String
        --
        + doFilterInternal(...) : void
        - extractClaims(token) : Map<String,Object>
    }
}

' Relations
TasksCreateDTO       ..|>  TasksCreateCommand
TasksCreateController -->  TasksCreateUseCase
TasksCreateController -->  StandardResponseDTO
TasksCreateController -->  GlobalSuccessEnum
TasksCreateUseCase   -->   TasksRepository
TasksCreateUseCase   -->   TasksEventProducer
TasksCreateUseCase   ..>   TasksEntity : creates
TasksEntity          ..>   DomainException : throws
DomainException      -->   DomainExceptionEnum
TasksEventProducer   -->   MessagingTopicEnum
TasksEventConsumer   -->   TasksRepository
TasksEventConsumer   -->   MessagingTopicEnum
TasksRepositoryImpl  ..|>  TasksRepository
TasksRepositoryImpl  -->   TasksRepositoryJPA
TasksRepositoryImpl  -->   TasksCategoryJPA
TasksRepositoryJPA   -->   TasksModel
TasksCategoryJPA     -->   CategoryModel
TasksModel           -->   CategoryModel
AuthFilter           ..>   TasksCreateController : sets credentialsData

@enduml